fix text alignment

--- a/src/components/Narrative/Narrative.module.css
+++ b/src/components/Narrative/Narrative.module.css
@@ -59,5 +59,6 @@ figcaption {
 
   .narrativeParagraph {
     font-size: 14px;
+    line-height: 18px;
   }
 }
