--- a/src/index.css
+++ b/src/index.css
@@ -313,38 +313,7 @@ p.moduleParagraph {
   stroke-dasharray: 1 6;
 }
 
-@media screen and (max-width: 600px) {
-  .section-small {
-    padding-top: 80px;
-  }
 
-  h1 {
-    font-size: 40px;
-    line-height: 1;
-  }
-
-  h2 {
-    font-size: 28px;
-    line-height: 1;
-  }
-
-  .moduleTitle {
-    font-size: 14px;
-  }
-  .moduleProgress {
-    font-size: 12px;
-  }
-  .textContainerTitle {
-    font-size: 18px;
-    line-height: 1;
-    margin-bottom: 2px;
-  }
-  .textContainerSubTitle {
-    font-size: 16px;
-    line-height: 1;
-    margin-top: 15px;
-  }
-}
 
 .bg {
   position: absolute;
@@ -530,6 +499,40 @@ ul.nav.nav-tabs li.nav-item button.active {
 }
 .Text .MediaImage_provenance{
   display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .section-small {
+    padding-top: 80px;
+  }
+
+  h1 {
+    font-size: 40px;
+    line-height: 1;
+  }
+
+  h2 {
+    font-size: 28px;
+    line-height: 1;
+  }
+
+  .moduleTitle {
+    font-size: 14px;
+  }
+  .moduleProgress {
+    font-size: 12px;
+  }
+  .textContainerTitle {
+    font-size: 18px;
+    line-height: 1;
+    margin-bottom: 2px;
+  }
+  .textContainerSubTitle {
+    font-size: 16px;
+    line-height: 1.25em;
+    margin-top: 15px;
+    text-align: left;
+  }
 }
 
 @media (min-width: 767px) {
